--- a/src/sample/View/mainForm.fxml
+++ b/src/sample/View/mainForm.fxml
@@ -25,7 +25,7 @@
                      </columns></TableView>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Button" />
+                        <Button fx:id="addPartButton" mnemonicParsing="false" onAction="#toAddPartForm" text="Add" />
                         <Button mnemonicParsing="false" text="Button" />
                         <Button mnemonicParsing="false" text="Button" />
                      </children>
