--- a/src/sample/View/addPartForm.fxml
+++ b/src/sample/View/addPartForm.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.AddPartController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.AddPartController">
    <children>
       <VBox>
          <children>
@@ -15,8 +15,14 @@
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <RadioButton fx:id="inhouseRadioButton" mnemonicParsing="false" text="In-House" />
-                  <RadioButton fx:id="outsourcedRadioButton" mnemonicParsing="false" text="Outsourced" />
+                  <fx:define>
+                     <ToggleGroup fx:id="group" />
+                  </fx:define>
+                  <RadioButton fx:id="inhouseRadioButton" mnemonicParsing="false" onAction="#changePartSource" text="In-House">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="group" />
+                     </toggleGroup></RadioButton>
+                  <RadioButton fx:id="outsourcedRadioButton" mnemonicParsing="false" onAction="#changePartSource" text="Outsourced" toggleGroup="$group" />
                </children>
             </HBox>
             <HBox>
