--- a/src/sample/View/addPartForm.fxml
+++ b/src/sample/View/addPartForm.fxml
@@ -28,7 +28,7 @@
             <HBox>
                <children>
                   <Label prefHeight="40.0" prefWidth="100.0" text="ID" />
-                  <TextField fx:id="idTextField" />
+                  <TextField fx:id="idTextField" editable="false" text="DISABLED - AUTO GEN" />
                </children>
             </HBox>
             <HBox layoutX="10.0" layoutY="52.0">
