--- a/src/sample/View/modifyPartForm.fxml
+++ b/src/sample/View/modifyPartForm.fxml
@@ -1,14 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.View.ModifyPartForm"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" >
+    <children>
+        <VBox>
+            <children>
+                <HBox>
+                    <children>
+                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="125.0" text="ADD PART">
+                            <font>
+                                <Font name="System Bold" size="18.0" />
+                            </font>
+                        </Label>
+                        <fx:define>
+                            <ToggleGroup fx:id="group" />
+                        </fx:define>
+                        <HBox alignment="CENTER" prefWidth="200.0">
+                            <children>
+                                <RadioButton fx:id="inhouseRadioButton" mnemonicParsing="false" onAction="#changePartSource" text="I-House">
+                                    <toggleGroup>
+                                        <ToggleGroup fx:id="group" />
+                                    </toggleGroup>
+                                    <HBox.margin>
+                                        <Insets right="10.0" />
+                                    </HBox.margin>
+                                </RadioButton>
+                                <RadioButton fx:id="outsourcedRadioButton" mnemonicParsing="false" onAction="#changePartSource" text="Outsourced" toggleGroup="$group" />
+                            </children>
+                        </HBox>
+                    </children>
+                </HBox>
+                <HBox>
+                    <children>
+                        <Label alignment="TOP_RIGHT" prefHeight="40.0" prefWidth="100.0" text="ID">
+                            <padding>
+                                <Insets right="15.0" />
+                            </padding></Label>
+                        <TextField fx:id="idTextField" editable="false" text="DISABLED - AUTO GEN">
+                            <font>
+                                <Font name="System Bold Italic" size="12.0" />
+                            </font></TextField>
+                    </children>
+                </HBox>
+                <HBox layoutX="10.0" layoutY="52.0">
+                    <children>
+                        <Label alignment="TOP_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Name">
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                            <padding>
+                                <Insets right="15.0" />
+                            </padding></Label>
+                        <TextField fx:id="nameTextField" />
+                    </children>
+                </HBox>
+                <HBox layoutX="10.0" layoutY="152.0">
+                    <children>
+                        <Label alignment="TOP_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Inv">
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                            <padding>
+                                <Insets right="15.0" />
+                            </padding></Label>
+                        <TextField fx:id="inventoryTextField" />
+                    </children>
+                </HBox>
+                <HBox layoutX="10.0" layoutY="252.0">
+                    <children>
+                        <Label alignment="TOP_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Price/Cost">
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                            <padding>
+                                <Insets right="15.0" />
+                            </padding></Label>
+                        <TextField fx:id="priceTextField" />
+                    </children>
+                </HBox>
+                <HBox layoutX="10.0" layoutY="352.0">
+                    <children>
+                        <Label alignment="TOP_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Min">
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                            <padding>
+                                <Insets right="15.0" />
+                            </padding></Label>
+                        <TextField fx:id="minTextField" />
+                        <Label alignment="TOP_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Max">
+                            <padding>
+                                <Insets right="15.0" />
+                            </padding></Label>
+                        <TextField fx:id="maxTextField" />
+                    </children>
+                </HBox>
+                <HBox layoutX="10.0" layoutY="52.0">
+                    <children>
+                        <Label fx:id="variableLabel" alignment="TOP_RIGHT" prefHeight="40.0" prefWidth="100.0" text="Label">
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                            <padding>
+                                <Insets right="15.0" />
+                            </padding></Label>
+                        <TextField fx:id="variableTextField" />
+                    </children>
+                </HBox>
+                <HBox layoutX="10.0" layoutY="52.0">
+                    <children>
+                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#generateNewPart" text="Save">
+                            <HBox.margin>
+                                <Insets right="6.0" />
+                            </HBox.margin></Button>
+                        <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#toMainMenu" text="Cancel" />
+                    </children>
+                    <padding>
+                        <Insets left="25.0" />
+                    </padding>
+                </HBox>
+                <VBox fx:id="errorLog" prefHeight="200.0" prefWidth="100.0" />
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
+
