--- a/src/sample/View/modifyPartForm.fxml
+++ b/src/sample/View/modifyPartForm.fxml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <VBox>
             <children>
                 <HBox>
                     <children>
-                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="125.0" text="ADD PART">
+                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="125.0" text="MODIFY PART">
                             <font>
                                 <Font name="System Bold" size="18.0" />
                             </font>
@@ -27,7 +21,7 @@
                         </fx:define>
                         <HBox alignment="CENTER" prefWidth="200.0">
                             <children>
-                                <RadioButton fx:id="inhouseRadioButton" mnemonicParsing="false" onAction="#changePartSource" text="I-House">
+                                <RadioButton fx:id="inhouseRadioButton" mnemonicParsing="false" onAction="#changePartSource" text="IN-House">
                                     <toggleGroup>
                                         <ToggleGroup fx:id="group" />
                                     </toggleGroup>
@@ -119,7 +113,7 @@
                 </HBox>
                 <HBox layoutX="10.0" layoutY="52.0">
                     <children>
-                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#generateNewPart" text="Save">
+                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#modifyPart" text="Save">
                             <HBox.margin>
                                 <Insets right="6.0" />
                             </HBox.margin></Button>
@@ -134,4 +128,3 @@
         </VBox>
     </children>
 </AnchorPane>
-
